@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project name="TreeTank" default="jar">
 
-	<property name="treetank.jar" value="treetank__V4.18.7.jar" />
+	<property name="treetank.jar" value="treetank__V4.18.8.jar" />
 
 	<property name="debuglevel" value="source,lines,vars" />
 	<property name="target" value="1.5" />
